# InterBasePython

./: .buildinfo  LICENSE.TXT  MANIFEST.in  PKG-INFO  README.md  changelog.html  differences-from-kdb.html  genindex.html  getting-started.html  index.html  license.html  listinv.py  objects.inv  py-modindex.html  pyproject.toml  python-db-api-compliance.html  reference.html  requirements.html  search.html  searchindex.js  setup.cfg  usage-guide.html
.github/workflows/: deploy-wheels.yml  pypi.yml
_sources/: changelog.txt  differences-from-kdb.txt  reference.txt  requirements.txt
_static/: documentation_options.js
docs/: .buildinfo  Makefile  changelog.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  python-db-api-compliance.html  reference.html  search.html  searchindex.js  usage-guide.html
docs/_sources/: index.txt  python-db-api-compliance.txt  usage-guide.txt
docs/_static/: documentation_options.js  idbtheme.css
idb/: schema.py
idb/test/: README.md  test_arrays.py  test_charset_conversion.py  test_connection.py  test_cursor.py  test_dbapi20.py  test_distributed_transaction.py  test_schema.py  test_services.py  test_stored_proc.py  test_stream_blobs.py
interbase/: __init__.py  blr.py  ibase.py  ibcore.py  schema.py  services.py  utils.py
interbase/test/: constants.py  core.py  test_arrays.py  test_bugs.py  test_change_views.py  test_create.py  (+14 more)
source/: conf.py  index.rst
sphinx/: conf.py  getting-started.txt  index.txt  python-db-api-compliance.txt  reference.txt  requirements.txt  usage-guide.txt
(+9 files in other folders)
