[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = sphinx
all-files = True


[metadata]
name = idb
version = 1.5.0
description = InterBase RDBMS bindings for Python.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Embarcadero/PythonInterBase
author = Sriram Balasubramanian
author_email = sriram.balasubramanian@embarcadero.com
license = BSD
license_files = ['LICENSE.TXT']
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database
project_urls = 
    Documentation = https://github.com/Embarcadero/PythonInterBase
    Source = https://github.com/Embarcadero/PythonInterBase
    Tracker = https://github.com/Embarcadero/PythonInterBase/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
python_requires = >=3
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
all =
    %(test)s
